--- a/public/style.css
+++ b/public/style.css
@@ -89,7 +89,7 @@ body {
 #content main .head-title .left h1 {
 	font-size: 36px;
 	font-weight: 600;
-	margin-bottom: 10px;
+	margin-bottom: 2px;
 	color: var(--dark);
 }
 #content main .head-title .left .breadcrumb {
@@ -127,11 +127,11 @@ body {
 #content main .box-info {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-	grid-gap: 24px;
+	grid-gap: 17px;
 	margin-top: 36px;
 }
 #content main .box-info li {
-	padding: 24px;
+	padding: 15px;
 	background: var(--light);
 	border-radius: 20px;
 	display: flex;
@@ -139,8 +139,8 @@ body {
 	grid-gap: 24px;
 }
 #content main .box-info li .bx {
-	width: 80px;
-	height: 80px;
+	width: 70px;
+	height: 70px;
 	border-radius: 10px;
 	font-size: 36px;
 	display: flex;
@@ -163,6 +163,10 @@ body {
 	font-size: 24px;
 	font-weight: 600;
 	color: var(--dark);
+}
+
+#content main .box-info .text .li .span a {
+	color: orange;
 }
 #content main .box-info li .text p {
 	color: var(--dark);	
